project/force-app/main/default/objects/Legal_Record_Rule__c/Legal_Record_Rule__c.object-meta.xml
<CustomObject>
    <label>Legal Record Rule</label>
    <nameField>
        <displayFormat>LRR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Record Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>