project/force-app/main/default/objects/Legal_Record_Rule__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cuisine</fullName><default>false</default><label>Cuisine</label></value><value><fullName>Non-cuisine</fullName><default>false</default><label>Non-cuisine</label></value><value><fullName>Shop Office</fullName><default>false</default><label>Shop Office</label></value><value><fullName>Shophouse</fullName><default>false</default><label>Shophouse</label></value></valueSetDefinition>
    </valueSet>
</CustomField>