project/force-app/main/default/objects/Legal_Record_Rule__c/fields/Legal_Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type_Level_1__c</fullName>
    <label>Legal Type Level 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Shopping mall RO business registration license</fullName><default>false</default><label>Shopping mall RO business registration license</label></value><value><fullName>RO insurance contract and certificate</fullName><default>false</default><label>RO insurance contract and certificate</label></value><value><fullName>Power of attorney for RO manager</fullName><default>false</default><label>Power of attorney for RO manager</label></value><value><fullName>Sub-licenses for business sectors as per regulations</fullName><default>false</default><label>Sub-licenses for business sectors as per regulations</label></value><value><fullName>Agency/Franchise contracts</fullName><default>false</default><label>Agency/Franchise contracts</label></value><value><fullName>Food safety eligibility certificate</fullName><default>false</default><label>Food safety eligibility certificate</label></value><value><fullName>Product self-declaration</fullName><default>false</default><label>Product self-declaration</label></value><value><fullName>Product declaration</fullName><default>false</default><label>Product declaration</label></value><value><fullName>Regular food testing samples</fullName><default>false</default><label>Regular food testing samples</label></value><value><fullName>Trademark registration or application</fullName><default>false</default><label>Trademark registration or application</label></value><value><fullName>Distribution authorization letter/Franchise, or agency agreements</fullName><default>false</default><label>Distribution authorization letter/Franchise, or agency agreements</label></value><value><fullName>Customs clearance for imported goods</fullName><default>false</default><label>Customs clearance for imported goods</label></value><value><fullName>Sales contract/Warehouse documents</fullName><default>false</default><label>Sales contract/Warehouse documents</label></value><value><fullName>Quality-certified and properly labeled products</fullName><default>false</default><label>Quality-certified and properly labeled products</label></value><value><fullName>Acceptance documents/ Fire safety inspection documents for large RO, cinema, language teaching/ education centers</fullName><default>false</default><label>Acceptance documents/ Fire safety inspection documents for large RO, cinema, language teaching/ education centers</label></value><value><fullName>Fire safety commitment</fullName><default>false</default><label>Fire safety commitment</label></value><value><fullName>Gas system inspection certificate</fullName><default>false</default><label>Gas system inspection certificate</label></value><value><fullName>Notify or register promotions with the Department of Industry and Trade and report promotion results</fullName><default>false</default><label>Notify or register promotions with the Department of Industry and Trade and report promotion results</label></value><value><fullName>RO information registration form</fullName><default>false</default><label>RO information registration form</label></value><value><fullName>RO staff registration form</fullName><default>false</default><label>RO staff registration form</label></value><value><fullName>Temporary residence/absence registration</fullName><default>false</default><label>Temporary residence/absence registration</label></value></valueSetDefinition>
    </valueSet>
</CustomField>