project/force-app/main/default/objects/Legal_Record_Rule__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>RO Handover/ RO Design Approval/ RO Acceptance Process</fullName><default>false</default><label>RO Handover/ RO Design Approval/ RO Acceptance Process</label></value><value><fullName>Renewal Process</fullName><default>false</default><label>Renewal Process</label></value><value><fullName>Liquidation Process</fullName><default>false</default><label>Liquidation Process</label></value><value><fullName>Relocation Process</fullName><default>false</default><label>Relocation Process</label></value><value><fullName>Price Support Process</fullName><default>false</default><label>Price Support Process</label></value><value><fullName>Change of Contract Information</fullName><default>false</default><label>Change of Contract Information</label></value><value><fullName>Administrative Process</fullName><default>false</default><label>Administrative Process</label></value><value><fullName>Information and Complaint Handling Process</fullName><default>false</default><label>Information and Complaint Handling Process</label></value><value><fullName>Handling Tenant Violations</fullName><default>false</default><label>Handling Tenant Violations</label></value></valueSetDefinition>
    </valueSet>
</CustomField>